<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="hint"
            type="String"/>

        <variable
            name="viewmodel"
            type="net.neoturbine.veles.datetimepicker.DateTimePickerContract.ViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/list_text_margin"
        android:paddingStart="@dimen/list_text_margin"
        tools:context="net.neoturbine.veles.datetimepicker.DateTimePicker">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/date_time_picker_text_input_layout"
            android:hint="@{viewmodel.hint}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/date_time_picker_time">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/date_time_picker_date"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:onClick="@{(v) -> viewmodel.dateButtonOnClick()}"
                android:text="@{viewmodel.date}"
                android:hint="@{viewmodel.hint}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:editable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none"
                tools:ignore="Deprecated,KeyboardInaccessibleWidget,TextFields" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/date_time_picker_time"
            style="@android:style/Widget.DeviceDefault.Light.Spinner"
            android:onClick="@{(v) -> viewmodel.timeButtonOnClick()}"
            android:text="@{viewmodel.time}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datetime_picker_timezone"
            android:layout_toStartOf="@+id/date_time_picker_timezone"
            android:layout_alignParentStart="true"
            android:layout_below="@id/date_time_picker_time"/>

        <!--suppress AndroidUnknownAttribute -->
        <Spinner
            android:id="@+id/date_time_picker_timezone"
            app:adapter="@{viewmodel.adapter}"
            android:selectedItemPosition="@={viewmodel.selectedTimeZoneIndex}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/date_time_picker_time"
            android:layout_alignParentEnd="true"/>

        <!-- http://stackoverflow.com/a/4146314/239003 -->
        <ImageView
            android:layout_below="@id/date_time_picker_timezone"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_height="2dip"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_bright"
            tools:ignore="ContentDescription"/>
    </RelativeLayout>
</layout>