<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="net.neoturbine.veles.qso.list.QSOListViewModel"/>
        <import type="android.text.method.LinkMovementMethod"/>
        <import type="android.support.v7.widget.LinearLayoutManager"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:name="net.neoturbine.veles.QSOListFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="net.neoturbine.veles.qso.list.QSOListActivity">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/qso_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/list_text_margin"
            android:layout_marginEnd="@dimen/list_text_margin"
            android:layout_marginStart="@dimen/list_text_margin"
            android:layout_marginTop="@dimen/list_text_margin"
            android:visibility="@{viewmodel.listVisibility}"
            app:adapter="@{viewmodel.adapter}"
            app:layoutManager="LinearLayoutManager"
            app:itemDividerDecoration="@{LinearLayoutManager.VERTICAL}"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
            app:layout_constraintRight_toRightOf="@+id/constraintLayout"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1"
            tools:listitem="@layout/qso_list_content" />

        <TextView
            android:id="@+id/empty_list_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qso_empty_list_message"
            android:visibility="@{viewmodel.missingQSOVisibility}"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
            app:layout_constraintRight_toRightOf="@+id/constraintLayout"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

        <Button
            android:id="@+id/empty_list_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:background="?android:selectableItemBackground"
            android:text="@string/qso_empty_list_link"
            android:textColor="@color/colorAccent"
            android:visibility="@{viewmodel.missingQSOVisibility}"
            app:movementMethod="@{LinkMovementMethod.getInstance()}"
            android:onClick="@{viewmodel::launchAddQSO}"
            app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
            app:layout_constraintRight_toRightOf="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/empty_list_message" />

    </android.support.constraint.ConstraintLayout>
</layout>