...

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/qso_station"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/qso_edit_station"
                android:text="@={viewmodel.otherStation}"
                android:inputType="textNoSuggestions|textCapCharacters" />

...
